typo in alemany

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -55,7 +55,7 @@
 
     <!-- Overview Section -->
         <div class="overview-container">
-            <h2>Alemary Farm</h2>
+            <h2>Alemany Farm</h2>
             <p class="project" style="text-align: center; padding-bottom: 10px; padding-top: 10px;">
                 A team of designers worked together to develop an iOS app for the purpose of documenting daily activities done at Alemany Farm, a non-profit urban farm based in San Francisco with the goal of providing fresh and nutritious produce for those who need it.
             </p>
