small style changes to alemany

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -108,35 +108,31 @@
                       <div class="team-container">
                           <div class="row">
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/zeyed.svg" alt="zulaika" />
+                                <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/kaylan.svg" alt="batu" />
+                                <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyed" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/shaantam.svg" alt="dan" />
+                                  <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/qianning.svg" alt="jeffrey" />
+                                  <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/ryan.svg" alt="natalie" />
-                              </div>
+                                <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
+                            </div>
                           </div>
                           <div class="row">
+                            <div class="col text-center">
+                                <p>Kaylan Huang</p>
+                                <p>Project Lead</p>
+                                <p>Senior | Economics</p>
+                            </div>
                               <div class="col text-center">
                                   <p>Zeyed El-Arabaty</p>
                                   <p>Project Lead</p>
                                   <p>Senior | CompSci</p>
-                              </div>
-                              <div class="col text-center">
-                                  <p>Kaylan Huang</p>
-                                  <p>Project Lead</p>
-                                  <p>Senior | Economics</p>
-                              </div>
-                              <div class="col text-center">
-                                  <p>Shaantam Chawla</p>
-                                  <p>Junior | EECS + Public Policy Minor</p>
                               </div>
                               <div class="col text-center">
                                   <p>Qianning Tang</p>
@@ -146,6 +142,10 @@
                                   <p>Ryan Yu</p>
                                   <p>Junior | Molecular and Cell Biology</p>
                               </div>
+                              <div class="col text-center">
+                                <p>Shaantam Chawla</p>
+                                <p>Junior | EECS + Public Policy Minor</p>
+                            </div>
                           </div>
                       </div>
                   </div>
