--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -140,19 +140,19 @@
                         </div>
                         <div class="row">
                             <div class="col-3 text-center">
-                                <p><strong>Brendan Shih</strong></p>
+                                <p>Brendan Shih</p>
                                 <p>Project Lead</p>  
                             </div>
                             <div class="col-3 text-center">
-                                <p><strong>Katrina Gonzales</strong></p>
+                                <p>>Katrina Gonzales</p>
                                 <p>Design Consultant</p>  
                             </div>
                             <div class="col-3 text-center">
-                                <p><strong>Malena Kleiven</strong></p>
+                                <p>Malena Kleiven</p>
                                 <p>Design Consultant</p> 
                             </div>
                             <div class="col-3 text-center">
-                                <p><strong>Manooshree Patel</strong></p>
+                                <p>Manooshree Patel</p>
                                 <p>Design Consultant</p> 
                             </div>
                         </div>
