name changes to comm cafe and makerspace

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </a>
                   </div>
                   <div class="col-sm">
-                    <a href="projects/pizzawpurpose.html">
+                    <a href="projects/communitycafe.html">
                         <img src="assets/img/community cafe rect.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
