--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1,
   shrink-to-fit=no">
 
-  <title>Pizza with a Purpose</title>
-  <meta name="description" content="Spring 2020: Pizza with a Purpose"/>
+  <title>Community Cafe</title>
+  <meta name="description" content="Spring 2020: Community Cafe"/>
   <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon" />
 
   <!-- Custom Fonts -->
@@ -70,7 +70,7 @@
     <!-- Overview Section -->
         <div class="overview-container">
             <!-- <h2>Groupsource</h2> -->
-            <h2>Pizza with a Purpose</h2>
+            <h2>Community Cafe</h2>
             <p class="project" style="text-align: center; padding-bottom: 10px;
             padding-top: 10px;">
             </p>
