--- a/projects/makerspace.html
+++ b/projects/makerspace.html
@@ -101,7 +101,7 @@
                         partner
                     </p>
                     <p style="text-align: center; font-style: normal;">
-                        The Moffit Library Makerspace
+                        The Moffitt Library
                     </p>
                   </div>
                   <div class="col-sm">
