small style changes on bsfc

--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -144,7 +144,7 @@
                                 <p>Project Lead</p>  
                             </div>
                             <div class="col-3 text-center">
-                                <p>>Katrina Gonzales</p>
+                                <p>Katrina Gonzales</p>
                                 <p>Design Consultant</p>  
                             </div>
                             <div class="col-3 text-center">
