--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -127,27 +127,38 @@
                             <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                                 <div class="row">
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
                                         <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
+                                        </a>
                                     </div>
                                     <div class="col">
                                         <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/neemarashidi/">
                                         <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
+                                        </a>
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/natalie-deng">
                                         <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
+                                        </a>
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
                                         <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
+                                        </a>
                                     </div>
                                     <div class="col">
+                                        <a href="https://www.linkedin.com/in/aryannair">
                                         <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col text-center">
-                                        <p>Grace Chen</p>
+                                        <p>
+                                            <a href="https://www.linkedin.com/in/grace-lam-95789a62/">Grace Lam</a></p>
                                         <p>Project Lead</p>  
                                         <p>EECS, Business</p>
                                     </div>
@@ -157,22 +168,30 @@
                                         <p>Architecture</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/neemarashidi/">
                                         <p>Neema Rashidi</p>
+                                        </a>
                                         <p>Community Engagement</p>  
                                         <p>MCB</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/natalie-deng">
                                         <p>Natalie Deng</p>
+                                        </a>
                                         <p>Community Engagement</p>  
                                         <p>Political Economics</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
                                         <p>Jake Nuesca</p>
+                                        </a>
                                         <p>Product Design</p>  
                                         <p>Mechanical Eng.</p>
                                     </div>
                                     <div class="col text-center">
+                                        <a href="https://www.linkedin.com/in/aryannair">
                                         <p>Aryan Nair</p>
+                                        </a>
                                         <p>Community Engagement</p>  
                                         <p>Chemical Eng.</p>
                                     </div>
