fixed hover for projects and added new thumbnails

--- a/index.html
+++ b/index.html
@@ -109,23 +109,23 @@
                 <div class="row">
                     <div class="col-sm">
                         <a href="projects/berkeley-student-food-collective.html">
-                            <img class="card-img" src="assets/img/berkeley-food-icon.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
+                            <img src="assets/img/berkeley-food-icon (1)-01.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);"
                             alt="Berkeley Student Food Collective">
                         </a>
                     </div>
                     <div class="col-sm">
                         <a href="projects/makerspace.html">
-                            <img class="card-img" src="assets/img/makerspace-icon.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <img src="assets/img/makerspace-icon (1)-01.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         </a>
                     </div>
                     <div class="col-sm">
                         <a href="projects/groupsource.html">
-                            <img class="card-img" src="assets/img/groupsource-icon.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                            <img src="assets/img/groupsource-icon-01.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                         </a>
                     </div>
                 </div>
               </div>
-
+              </div>
         </div>
     </section>
 
