--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
         <div class="container">
             <h2>Inventing a better tomorrow</h2>
             <p>
-                We are <strong>Invention Corps of Berkeley</strong>. We are an interdisciplinary group of students driven to create meaningful global change through human-centered design. We partner with people and organizations who are interested in creating solutions in the realms of society, health, poverty, and the environment. 
+                Hi there! We are <strong>Invention Corps of Berkeley</strong>. We are an interdisciplinary group of students driven to create meaningful global change through human-centered design. We partner with people and organizations who are interested in creating solutions in the realms of society, health, poverty, and the environment. 
             </p>
             <p>
-                Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and live . We get together as an organization to celebrate our accomplishments with presentations, demos, and usually a good amount of snacks. This year, due to the Covid-19 pandemic, we present our virtual showcase. Here we have our project reports and annual art project (but you'll have to provide the snacks).            </p>
+                Our club hosts a semesterly showcase to share the work we have done on our projects typically with presentations and live demos. This semester, we present our <strong>Virtual Showcase</strong>. Our theme this semester is <i>String Theory</i>. As the pandemic has forced many of us apart, we were inspired by the natural forces keeping us together, which you'll see our interpretations of throughout the website.           </p>
             <p>
-                Our showcase theme for this semester is <strong>String Theory</strong>. As the pandemic forced many of us apart, we were inspired by the forces keeping us together. This theme manifested itself in the artwork on this website, specifically our annual art piece.            
+                To adapt our tradition of creating a large-scale physical art piece, we were challenged to reimagine something virtually collaborative and engaging. Deriving inspiration from the idea of the necessary and inevitable reaction of particles, we created a structure of interacting, free-form 'blobs'. Each blob was designed individually by each of our amazingly unique members, visually created as a representation of themselves and the color that represents them. In its truest form, this art piece represents how multi-faceted each member is, and how we all can embrace our differences and come together to create a beautiful tapestry of color. We hope you enjoy exploring <i>String Theory</i> and browsing through our project gallery.           
             </p>
             <p>
-                Traditionally, the club creates a massive physical art piece to present at showcase. This year, we were challenged with reimagining our art piece as something virtually collaborative and engaging. Following our chosen theme of String Theory, which speaks upon the necessary and inevitable reaction of particles, we created a rigid structure of particles or 'blob' groupings, one for each team member, and asked that they design a 'blob' of their choice in any way that represents themselves. We then put the blobs together to form one piece. In its truest form, we strongly believe that this art piece represents the multi-faceted designers that we are and our unbreakable bond with one another. As you explore String Theory, begin to note all the ways that the particles interact with one other. Enjoy! 
+                Love, <br>The Showcase Squad, Spring 2020</br>
             </p>
             
         </div>
