--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -298,7 +298,7 @@
                         id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <h4>Interview Key Findings</h4>
+                        <h4>Brainstorming</h4>
                         <p>
                             After we conducted our interviews, we discussed each
                             of our key insights and identified common problems
