--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   </div>
                   <div class="col-sm">
                     <a href="projects/communitycafe.html">
-                        <img src="assets/img/community cafe rect.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
+                        <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
                   <div class="col-sm">
