added names and descriptors

--- a/index.html
+++ b/index.html
@@ -136,67 +136,67 @@
             <h2>Colors of ICB</h2>
             <div class="labels left d-none d-lg-flex">
                 <div class="label-col">
-                    <p class="label">1. Name<br/>(descriptor)</p>
-                    <p class="label">2. Name<br/>(descriptor)</p>
-                    <p class="label">3. Name<br/>(descriptor)</p>
-                    <p class="label">4. Name<br/>(descriptor)</p>
-                    <p class="label">5. Name<br/>(descriptor)</p>
-                    <p class="label">6. Name<br/>(descriptor)</p>
-                    <p class="label">7. Name<br/>(descriptor)</p>
-                    <p class="label">8. Name<br/>(descriptor)</p>
-                    <p class="label">9. Name<br/>(descriptor)</p>
-                    <p class="label">10. Name<br/>(descriptor)</p>
+                    <p class="label"><span>1. Abhi</span><br/>Ultraviolet Light</p>
+                    <p class="label"><span>2. Allan</span><br/>Stand-Out Silver</p>
+                    <p class="label"><span>3. Anderson</span><br/>Scent of Autumn</p>
+                    <p class="label"><span>4. Anika</span><br/>Periwinkle Co.</p>
+                    <p class="label"><span>5. Anjali</span><br/>New Leaf</p>
+                    <p class="label"><span>6. Aryan</span><br/>Magenta</p>
+                    <p class="label"><span>7. Batu</span><br/>Purplange</p>
+                    <p class="label"><span>8. Bongi</span><br/>Sky Green</p>
+                    <p class="label"><span>9. Brendan</span><br/>Chameleon</p>
+                    <p class="label"><span>10. Cait</span><br/>Omni-Shade</p>
                 </div>
                 <div class="label-col">
-                    <p class="label">11. Name<br/>(descriptor)</p>
-                    <p class="label">12. Name<br/>(descriptor)</p>
-                    <p class="label">13. Name<br/>(descriptor)</p>
-                    <p class="label">14. Name<br/>(descriptor)</p>
-                    <p class="label">15. Name<br/>(descriptor)</p>
-                    <p class="label">16. Name<br/>(descriptor)</p>
-                    <p class="label">17. Name<br/>(descriptor)</p>
-                    <p class="label">18. Name<br/>(descriptor)</p>
-                    <p class="label">19. Name<br/>(descriptor)</p>
+                    <p class="label"><span>11. Carlos</span><br/>Color of Emotion</p>
+                    <p class="label"><span>12. Courtnie</span><br/>Gleaming White</p>
+                    <p class="label"><span>13. Dan</span><br/>Beach Sunset Purple</p>
+                    <p class="label"><span>14. Grace</span><br/>Warm White</p>
+                    <p class="label"><span>15. Hannah</span><br/>Blue-Black Swirl</p>
+                    <p class="label"><span>16. Iris</span><br/>Blue Dimension</p>
+                    <p class="label"><span>17. Isabella</span><br/>Seafoam Green</p>
+                    <p class="label"><span>18. Jake</span><br/>Austere Gray</p>
+                    <p class="label"><span>19. Jasmine</span><br/>Joyful Elegance</p>
                 </div>
                 <div class="label-col">
-                    <p class="label">20. Name<br/>(descriptor)</p>
-                    <p class="label">21. Name<br/>(descriptor)</p>
-                    <p class="label">22. Name<br/>(descriptor)</p>
-                    <p class="label">23. Name<br/>(descriptor)</p>
-                    <p class="label">24. Name<br/>(descriptor)</p>
-                    <p class="label">25. Name<br/>(descriptor)</p>
-                    <p class="label">26. Name<br/>(descriptor)</p>
+                    <p class="label"><span>20. Jeffrey</span><br/>Petunia</p>
+                    <p class="label"><span>21. Joe</span><br/>Utilitarian Grey</p>
+                    <p class="label"><span>22. Joey</span><br/>Mantis Shrimp</p>
+                    <p class="label"><span>23. Katrina</span><br/>Arizona Sky</p>
+                    <p class="label"><span>24. Kaylan</span><br/>Complementary</p>
+                    <p class="label"><span>25. Laural</span><br/>Color Scratch</p>
+                    <p class="label"><span>26. Leilani</span><br/>Funfetti</p>
                 </div>
             </div>
             <div class="labels right d-none d-lg-flex">
                 <div class="label-col">
-                    <p class="label">27. Name<br/>(descriptor)</p>
-                    <p class="label">28. Name<br/>(descriptor)</p>
-                    <p class="label">29. Name<br/>(descriptor)</p>
-                    <p class="label">30. Name<br/>(descriptor)</p>
-                    <p class="label">31. Name<br/>(descriptor)</p>
+                    <p class="label"><span>27. Leo</span><br/>Neutron Star Blue</p>
+                    <p class="label"><span>28. Malena</span><br/>Sparkling Blush</p>
+                    <p class="label"><span>29. Manooshree</span><br/>Paint Water</p>
+                    <p class="label"><span>30. Maya</span><br/>Blank Fill</p>
+                    <p class="label"><span>31. Michael</span><br/>Fire of Music</p>
                 </div>
                 <div class="label-col">
-                    <p class="label">32. Name<br/>(descriptor)</p>
-                    <p class="label">33. Name<br/>(descriptor)</p>
-                    <p class="label">34. Name<br/>(descriptor)</p>
-                    <p class="label">35. Name<br/>(descriptor)</p>
-                    <p class="label">36. Name<br/>(descriptor)</p>
-                    <p class="label">37. Name<br/>(descriptor)</p>
-                    <p class="label">38. Name<br/>(descriptor)</p>
-                    <p class="label">39. Name<br/>(descriptor)</p>
+                    <p class="label"><span>32. Natalie C</span><br/>Color of Equity</p>
+                    <p class="label"><span>33. Natalie D</span><br/>Skin Tone Shades</p>
+                    <p class="label"><span>34. Neema</span><br/>Acid Rap</p>
+                    <p class="label"><span>35. Neha</span><br/>Beyond</p>
+                    <p class="label"><span>36. Nicole</span><br/>Clearescent</p>
+                    <p class="label"><span>37. Nik</span><br/>S'mores</p>
+                    <p class="label"><span>38. Philippa</span><br/>Transparency</p>
+                    <p class="label"><span>39. Qianning</span><br/>Monstera Plant</p>
                 </div>
                 <div class="label-col">
-                    <p class="label">40. Name<br/>(descriptor)</p>
-                    <p class="label">41. Name<br/>(descriptor)</p>
-                    <p class="label">42. Name<br/>(descriptor)</p>
-                    <p class="label">43. Name<br/>(descriptor)</p>
-                    <p class="label">44. Name<br/>(descriptor)</p>
-                    <p class="label">45. Name<br/>(descriptor)</p>
-                    <p class="label">46. Name<br/>(descriptor)</p>
-                    <p class="label">47. Name<br/>(descriptor)</p>
-                    <p class="label">48. Name<br/>(descriptor)</p>
-                    <p class="label">49. Name<br/>(descriptor)</p>
+                    <p class="label"><span>40. Regan</span><br/>Sunset Hues</p>
+                    <p class="label"><span>41. Reid</span><br/>PurpALL</p>
+                    <p class="label"><span>42. Ryan</span><br/>Hawaiian Shirt</p>
+                    <p class="label"><span>43. Shaantam</span><br/>Wood</p>
+                    <p class="label"><span>44. Sunny</span><br/>Sunshine</p>
+                    <p class="label"><span>45. Tanthai</span><br/>Between Red & Green</p>
+                    <p class="label"><span>46. Tori</span><br/>Cerulean Slumber</p>
+                    <p class="label"><span>47. Vince</span><br/>Connective Bronze</p>
+                    <p class="label"><span>48. Zeyad</span><br/>Sky to Navy Blue</p>
+                    <p class="label"><span>49. Zulaika</span><br/>Hero</p>
                 </div>
             </div>
             <div id="art-container">
