--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -108,19 +108,19 @@
                       <div class="team-container">
                           <div class="row">
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/zeyed.svg" alt="zulaika" />
+                                  <img src="../assets/img/alemany/people/zeyed.svg" alt="zeyed" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/kaylan.svg" alt="batu" />
+                                  <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/shaantam.svg" alt="dan" />
+                                  <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/qianning.svg" alt="jeffrey" />
+                                  <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
                               </div>
                               <div class="col">
-                                  <img src="../assets/img/alemany/people/ryan.svg" alt="natalie" />
+                                  <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                               </div>
                           </div>
                           <div class="row">
@@ -179,12 +179,12 @@
                     <div class="col-9" style="font-style: normal;">
                       <p> Our team first began our design process by traveling to the farm to interview the users in order to gain a better perspective on their pain points. We learned that Alemany Farm were using a simple map and numbering system to locate trees, with no universal method for documenting what they had done for the day. This meant that other volunteers would often repeat treatments, miss certain trees, and couldn’t communicate with volunteers from other shifts. </p>
                     <p> After the tour, we headed back to campus to brainstorm ideas and prototype possible solutions.</p>
-                  </div>
+
                   <div class="row">
 
                         <img src="../assets/img/alemany/notetakingkids.png">
                         <figcaption style="font-size: x-small;">Intense note-taking in process!</figcaption>
-
+                    </div>
                   </div>
                 </div>
             </div>
