style changes to gs

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p>
             <div class="container">
                 <div class="row">
-                  <div class="col-sm">
+                  <div class="col-6 col-sm">
                     <a href="projects/alemany-farms.html">
                         <img src="assets/img/alemany farm rect.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);" alt="Alemany Farm">
                     </a>
                   </div>
-                  <div class="col-sm">
+                  <div class="col-6 col-sm">
                     <a href="projects/communitycafe.html">
                         <img src="assets/img/community cafe final.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
                   </div>
-                  <div class="col-sm">
+                  <div class="col-6 col-sm">
                     <a href="projects/netic.html">
                         <img src="assets/img/neomotion rect.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14);">
                     </a>
