--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -596,7 +596,7 @@
                     </p>
                     <p>
                         Moreover, our team conducted interviews with the
-                        director COFED and the recently elected
+                        director of COFED and the recently elected
                         vice-president of student affairs in ASUC. These
                         insights enabled us to derive greater understanding
                         of the interconnection between the Berkeley student
