--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -194,7 +194,7 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <h3 style="text-align: center;"
-                        id="background-header"><u style="border-bottom: 10px solid #E06B65;">define</u></h3>
+                        id="background-header"><u style="border-bottom: 10px solid #E06B65;">background</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <p>
@@ -298,7 +298,7 @@
                         id="define-header"><u style="border-bottom: 10px solid #99CC99;">define</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <h4>Brainstorming</h4>
+                        <h4>Interview Key Findings</h4>
                         <p>
                             After we conducted our interviews, we discussed each
                             of our key insights and identified common problems
@@ -326,7 +326,7 @@
                         id="ideate-header"><u style="border-bottom: 10px solid #99CCFF;">ideate</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <h4>Interview Key Findings</h4>
+                        <h4>Brainstorming</h4>
                         <p>
                             In our initial meetings, the team and mentors hosted
                             a brainstorming session where we outlined important
