removed blob alert

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <script src="assets/js/app.js"></script>
     <!-- Custom Scripts -->
     <script src="assets/js/script.js"></script>
-    <script src="assets/js/members.js"></script>
+    <!-- <script src="assets/js/members.js"></script> -->
 </body>
 
 </html>
