--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <section id="projects">
         <div class="container">
             <h2>Our Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
             <div class="container">
                 <div class="row">
                   <div class="col-6 col-sm">
