fixed errors oops

--- a/projects/netic.html
+++ b/projects/netic.html
@@ -76,8 +76,7 @@
 
 
             <p class="project" style="text-align: center; padding-bottom: 10px; padding-top: 10px;">
-                A team of designers worked together to develop an iOS app for the purpose of documenting daily activities done at Alemany Farm, a non-profit urban farm based in San Francisco with the goal of providing fresh and nutritious produce for those who need it.
-            </p>
+              Our project was to design a better experience for physical therapy patients. More specifically, we did so by designing the user interface, establishing the brand identity, and developing the ML. </p>
             <div class="project-overview-container">
                 <div class="row">
                   <div class="col-sm">
@@ -169,12 +168,12 @@
                                 <div class="col text-center">
                                     <p>Reid Johnson</p>
                                     <p>Coding Consultant</p>
-                                    <p>Freshman | Math + CompSci</p>
+                                    <p>Junior | Math + CompSci</p>
                                 </div>
                                 <div class="col text-center">
                                     <p>Carlos Oriol</p>
                                     <p>Design Consultant</p>
-                                    <p>Freshman | Data Science</p>
+                                    <p>Sophomore | Data Science</p>
                                 </div>
                             </div>
                         </div>
